--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^8.1.2",
     "@nestjs/websockets": "^8.4.6",
     "cz-conventional-changelog-zh": "0.0.2",
+    "dayjs": "^1.11.3",
     "mqtt": "^4.3.7",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
