--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "cz-conventional-changelog-zh": "0.0.2",
     "dayjs": "^1.11.3",
     "mqtt": "^4.3.7",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -46,7 +46,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
-    "@types/node": "^16.0.0",
+    "@types/node": "^16.11.39",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
