--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/platform-socket.io": "^8.4.6",
     "@nestjs/typeorm": "^8.1.2",
     "@nestjs/websockets": "^8.4.6",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cz-conventional-changelog-zh": "0.0.2",
     "dayjs": "^1.11.3",
     "mqtt": "^4.3.7",
