--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "axios": "^0.27.2",
     "commitizen": "^4.2.4",
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
@@ -63,6 +64,7 @@
     "husky": "^8.0.0",
     "jest": "28.0.3",
     "prettier": "^2.3.2",
+    "request": "^2.88.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
